index.css
@font-face {
    font-family: 'League Spartan';
    src: url('fonts/subset-LeagueSpartan-Bold.eot');
    src: url('fonts/subset-LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype'),
        url('fonts/subset-LeagueSpartan-Bold.woff') format('woff'),
        url('fonts/subset-LeagueSpartan-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

/* Header styling */
.wrapper {
    width: 1225px;
    margin: auto;
}

.header {
    height: 44px;
    margin-top: 12px;
}

.header__logo {
    margin-right: 100px;
}

.list {
    padding: 0;
    margin:0;
    float: right;
    margin-top: 16px;
}

.header__nav {
    display: inline-block;
    margin-top: 15px;
    float: left;
}

.list__item {
    list-style-type: none;
    height: 18px;
    display: inline-block;
    margin-right: 43px;
}

.list__item:last-child {
    margin-right: 0;
}

.font-primary {
    font-family: "League Spartan", Arial, Tahoma, sans-serif;
}

.list__link {
    font-size: 9px;
    opacity: 0.9;
    color: #0b0c11;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 5px;
    height: 100%;

}

.list__link:hover {
    color: #5da8ef;
}

